@@ -1,3 +1,10 @@
+2002-10-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* doc/api/malloc.dox: Explain malloc details.
+	* include/stdlib.h: refer to malloc explanation.
+	* doc/api/Makefile.am: include malloc.dox.
+	* doc/api/sections.dox: refer to malloc explanation.
+
 2002-10-22  Theodore A. Roth  <troth@openavr.org>
 
 	* configure.in (AM_INIT_AUTOMAKE): Bump version.
